--- a/Conventional_ML.ipynb
+++ b/Conventional_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,9 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19008\n"
+     ]
+    }
+   ],
    "source": [
     "# get train and set labels\n",
     "def known_target_split(unrolled_ballots, target_length):\n",
@@ -111,12 +119,29 @@
     "            known_selections.append(list(unrolled_ballots[b][:target_length - 1]))\n",
     "            target_selection.append(unrolled_ballots[b][target_length - 1])\n",
     "    return known_selections, target_selection\n",
-    "known_selections, target_selection = known_target_split(unrolled_ballots, 2)"
+    "known_selections, target_selection = known_target_split(unrolled_ballots, 5)\n",
+    "print(len(known_selections))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clf = svm.SVC(gamma=0.15)\n",
+    "# for i in range(2, 13):\n",
+    "#     known_selections, target_selection = known_target_split(unrolled_ballots, i)\n",
+    "#     X_train, X_test, y_train, y_test = train_test_split(known_selections,target_selection, test_size = 0.2, random_state=1)    \n",
+    "#     clf.fit(X_train, y_train)\n",
+    "# #     predicted = clf.predict(X_test)\n",
+    "#     for j in range(len(predicted)):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +170,7 @@
        "SVC(gamma=0.15)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,41 +190,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "15206\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.39      0.63      0.48       522\n",
-      "           2       0.00      0.00      0.00       785\n",
-      "           3       0.00      0.00      0.00       256\n",
-      "           4       0.00      0.00      0.00      1049\n",
-      "           5       0.00      0.00      0.00       258\n",
-      "           6       0.41      0.76      0.53      1339\n",
-      "           7       0.50      0.15      0.24       712\n",
-      "           8       0.00      0.00      0.00        88\n",
-      "           9       0.28      0.33      0.30      1120\n",
-      "          10       0.32      0.58      0.41      1376\n",
-      "          11       0.00      0.00      0.00        42\n",
-      "          12       0.37      0.42      0.40       904\n",
+      "           1       0.34      0.43      0.38       412\n",
+      "           2       0.30      0.31      0.30       435\n",
+      "           3       0.14      0.02      0.03       190\n",
+      "           4       0.27      0.25      0.26       291\n",
+      "           5       0.30      0.17      0.22       335\n",
+      "           6       0.34      0.23      0.27       266\n",
+      "           7       0.28      0.31      0.29       373\n",
+      "           8       0.21      0.06      0.10       225\n",
+      "           9       0.27      0.47      0.34       363\n",
+      "          10       0.34      0.58      0.43       424\n",
+      "          11       0.00      0.00      0.00       163\n",
+      "          12       0.35      0.37      0.36       325\n",
       "\n",
-      "    accuracy                           0.36      8451\n",
-      "   macro avg       0.19      0.24      0.20      8451\n",
-      "weighted avg       0.26      0.36      0.28      8451\n",
+      "    accuracy                           0.31      3802\n",
+      "   macro avg       0.26      0.27      0.25      3802\n",
+      "weighted avg       0.28      0.31      0.28      3802\n",
       "\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
