added into main loop

--- a/Conventional_ML.ipynb
+++ b/Conventional_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,17 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "43942  ballots\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# unroll ballots\n",
     "def unroll_ballots(ballots):\n",
@@ -92,23 +84,16 @@
     "        for i in range(ballots[b][1]):\n",
     "            unrolled_ballots.append(list(ballots[b][0]))\n",
     "    return unrolled_ballots\n",
-    "unrolled_ballots = unroll_ballots(ballots)\n",
-    "print(len(unrolled_ballots), \" ballots\")"
+    "\n",
+    "# unrolled_ballots = unroll_ballots(ballots)\n",
+    "# print(len(unrolled_ballots), \" ballots\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19008\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get train and set labels\n",
     "def known_target_split(unrolled_ballots, target_length):\n",
@@ -119,115 +104,82 @@
     "            known_selections.append(list(unrolled_ballots[b][:target_length - 1]))\n",
     "            target_selection.append(unrolled_ballots[b][target_length - 1])\n",
     "    return known_selections, target_selection\n",
-    "known_selections, target_selection = known_target_split(unrolled_ballots, 5)\n",
-    "print(len(known_selections))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clf = svm.SVC(gamma=0.15)\n",
-    "# for i in range(2, 13):\n",
-    "#     known_selections, target_selection = known_target_split(unrolled_ballots, i)\n",
-    "#     X_train, X_test, y_train, y_test = train_test_split(known_selections,target_selection, test_size = 0.2, random_state=1)    \n",
-    "#     clf.fit(X_train, y_train)\n",
-    "# #     predicted = clf.predict(X_test)\n",
-    "#     for j in range(len(predicted)):\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# divide into train and test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(known_selections,target_selection, test_size = 0.2, random_state=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a classifier: a support vector classifier\n",
-    "clf = svm.SVC(gamma=0.15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(gamma=0.15)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted = clf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15206\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           1       0.34      0.43      0.38       412\n",
-      "           2       0.30      0.31      0.30       435\n",
-      "           3       0.14      0.02      0.03       190\n",
-      "           4       0.27      0.25      0.26       291\n",
-      "           5       0.30      0.17      0.22       335\n",
-      "           6       0.34      0.23      0.27       266\n",
-      "           7       0.28      0.31      0.29       373\n",
-      "           8       0.21      0.06      0.10       225\n",
-      "           9       0.27      0.47      0.34       363\n",
-      "          10       0.34      0.58      0.43       424\n",
-      "          11       0.00      0.00      0.00       163\n",
-      "          12       0.35      0.37      0.36       325\n",
-      "\n",
-      "    accuracy                           0.31      3802\n",
-      "   macro avg       0.26      0.27      0.25      3802\n",
-      "weighted avg       0.28      0.31      0.28      3802\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"{metrics.classification_report(y_test, predicted)}\\n\")"
+    "\n",
+    "# known_selections, target_selection = known_target_split(unrolled_ballots, 5)\n",
+    "# print(len(known_selections))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# divide into train and test set\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(known_selections,target_selection, test_size = 0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a classifier: a support vector classifier\n",
+    "# clf = svm.SVC(gamma=0.15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predicted = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(f\"{metrics.classification_report(y_test, predicted)}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_svm(known_selections, target_selection):\n",
+    "    clf = svm.SVC(gamma=0.15)\n",
+    "#     X_train, X_test, y_train, y_test = train_test_split(known_selections,target_selection, test_size = 0.2, random_state=1)    \n",
+    "#     clf.fit(X_train, y_train)\n",
+    "    clf.fit(known_selections, target_selection)\n",
+    "    return clf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,26 +187,37 @@
     "def predict(ballots, target_ballot, model):\n",
     "    # finish this\n",
     "    \n",
-    "    ##################### place holder ####################\n",
-    "    temp = list(target_ballot)\n",
-    "    temp.append(random.randint(1,12))\n",
-    "    improved_target_ballot = tuple(temp)\n",
-    "    #######################################################\n",
+    "    target = model.predict([target_ballot])\n",
+    "    improved_target_ballot = list(target_ballot)\n",
+    "    improved_target_ballot.append(target[0])\n",
+    "    \n",
+    "#     ##################### place holder ####################\n",
+    "#     temp = list(target_ballot)\n",
+    "#     temp.append(random.randint(1,12))\n",
+    "#     improved_target_ballot = tuple(temp)\n",
+    "#     #######################################################\n",
     "    \n",
     "    return improved_target_ballot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "# this code will modify the data in \"ballots\". Need to rerun above data reading code to restore\n",
     "# data in the dictionary.\n",
     "for i in range(1, candidate_count):\n",
+    "    # unroll ballots\n",
+    "    unrolled_ballots = unroll_ballots(ballots)\n",
+    "    \n",
+    "    # split into data and labels, where the selection at i + 1 place is the label, selections before\n",
+    "    # are the data\n",
+    "    known_selections, target_selection = known_target_split(unrolled_ballots, i + 1)\n",
+    "    \n",
     "    # train model for predicting the i+1 preference\n",
-    "    model = None\n",
+    "    model = train_svm(known_selections, target_selection)\n",
     "    \n",
     "    # update ballots with only i preference\n",
     "#     keys = list(ballots.keys())\n",
@@ -274,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
